2006-01-11 14:35 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerSwap) lower gridMinSwapCost and
	gridMinSwapCostImprovement to get more swaps.

2006-01-11 14:25 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridMinSwapCost,gridMinSwapCostImprovement) store
	the swap cost limits in the Grid struct.
	* src/gridswap.c (gridMinSwapCost,gridMinSwapCostImprovement) use
	instead of COSTLIMIT and REQUIRED_IMPROVEMENT.

2006-01-11 08:35 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdaptVolumeEdges) only split long volume edges.
	* src/unit_main.c (main) --phase -3: call gridAdaptVolumeEdges to 
	complete test case.

2006-01-10 16:16 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) --phase -3: added but not happy yet.

2006-01-10 13:29 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) --phase -2: put together swap and split ops.
	* src/gridfacer.c (gridfacerRatioRange) longest and shortest
	interior edges.

2006-01-10 13:45 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridFindEnclosingCell) silently ignore unable to find
	next cell due to boundary.

2006-01-10 13:29 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerSplit) split long edges.

2006-01-10 11:56 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerRemoveEdge) to remove and edge from
	current list.
	* src/gridfacer.c (gridfacerSwap) to swap to improve edge length.

2006-01-10 11:15 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerSwap) started swapping routine to
	reduce edge ratio.

2006-01-10 08:57 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerCreate) forms list of unique
	triangle sides on startup.
	* src/gridfacer.c (gridfacerEdges) return the number of unique
	triangle sides.

2006-01-09 13:36 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerExamine) to list out faces and fix typos.

2006-01-09 13:20 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerCreate) added a new module modeled